<resources>

    <string name="app_name">FinanC</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="OpenMenu"> Open Menu </string>
    <string name="CloseMenu"> Close Menu </string>


    <!-- Categoria Form -->
    <string name="Title_CategoriaCreate">Criar categoria</string>
    <string name="Label_CategoriaFormName">Nome</string>
    <string name="Hint_CategoriaFormName">Nome da categoria</string>
    <string name="Btn_CategoriaSubmit">Cadastrar categoria</string>

    <!-- Conta Form -->
    <string name="Title_ContaCreate">Criar conta</string>

    <string name="Label_ContaFormName">Nome</string>
    <string name="Hint_ContaFormName">Nome da conta</string>

    <string name="Label_ContaFormCPF">CPF</string>
    <string name="Hint_ContaFormCPF">CPF valido</string>

    <string name="Label_ContaFormPicture">Foto</string>
    <string name="Hint_ContaFormPicture">Foto</string>

    <string name="Btn_ContaSubmit">Cadastrar conta</string>
    <string name="Title_CategoriaFragment">Categorias</string>

    <!-- Lancamento Form -->
    <string name="Title_LancamentoCreate">Criar Lancamento</string>
    <string name="Label_LancamentoFormValor">Valor</string>
    <string name="Hint_LancamentoFormValor">Valor do lançamento</string>
    <string name="Btn_LancamentoSubmit">Cadastrar lancamento</string>

    <string name="Label_LancamentoFormCategoria">Categoria</string>
    <string name="Label_LancamentoFormConta">Conta</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>