<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ContaConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.conta.CreateContaFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_CreateContaFragment"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/label_ContaFormName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Label_ContaFormName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="72dp" />

        <EditText
            android:id="@+id/edit_ContaNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Hint_ContaFormName"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="92dp" />

        <TextView
            android:id="@+id/label_ContaFormCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Label_ContaFormCPF"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="137dp" />

        <EditText
            android:id="@+id/edit_ContaCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Hint_ContaFormCPF"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="156dp" />

        <TextView
            android:id="@+id/label_ContaFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Label_ContaFormPicture"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="201dp" />

        <EditText
            android:id="@+id/edit_ContaFormPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Hint_ContaFormPicture"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="221dp" />

        <Button
            android:id="@+id/btn_ContaSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn_ContaSubmit"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="266dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/title_CreateContaFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/Title_ContaCreate"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>